--- a/package.json
+++ b/package.json
@@ -9,19 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^6.2.0",
+    "moment": "^2.30.1",
+    "next": "15.1.4",
+    "prisma": "^6.2.0",
     "react": "^19.0.0",
+    "react-clock": "^5.1.0",
+    "react-datepicker": "^7.6.0",
+    "react-datetime-picker": "^6.0.1",
     "react-dom": "^19.0.0",
-    "next": "15.1.4"
+    "react-time-picker": "^7.0.0"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@eslint/eslintrc": "^3",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "autoprefixer": "^10.4.20",
     "eslint": "^9",
     "eslint-config-next": "15.1.4",
-    "@eslint/eslintrc": "^3"
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5"
   }
 }
